# ai_papers_cleaner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  add_papers_with_code.py  clean_paper.sh  pdf_extractor.py  pyproject.toml  start_here.sh  text_cleaner.py  timer.py  unify_papers_data.py  url_scrapper.py  utils.py
